@@ -1,5 +1,6 @@
 v? - ????/??/??
 - fixing issue with wait_for_window sometimes not timing out - raised by mrwizard82d1
+- using (:how_many => :all) when getting elements will always return an array, even when no matching elements are found
 
 v0.1.11 - 2011/2/10
 - tweek to make bewildr work with IronRuby 1.1.2
